Archive2/98/701b3cb8372557/output
main.cpp: In instantiation of 'void Attribute<P>::set_all(const P0&, const Px& ...) [with int index = 0; P0 = int [2]; Px = {}; P = {int [2]}]':
main.cpp:153:16:   required from 'Attribute<P>::Attribute(const P& ...) [with P = {int [2]}]'
main.cpp:176:19:   required from here
main.cpp:143:9: error: statement cannot resolve address of overloaded function
         set_all<index+1, p...>;
         ^
